--- a/iamport-frontend/package.json
+++ b/iamport-frontend/package.json
@@ -6,10 +6,27 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "async-lock": "^1.3.1",
     "axios": "^0.25.0",
+    "isomorphic-fetch": "^3.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "moment-lunar": "0.0.4",
+    "node-sass": "^7.0.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^1.3.5",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "redux-saga-thunk": "^0.7.3",
+    "styled-components": "^5.3.3",
+    "styled-theme": "^0.3.3",
+    "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:8080",
@@ -36,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.19",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11"
   }
 }
